# lillys-box

./: .claudeignore  .gitignore  .prettierignore  160126-responsivity.md  160126.md  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_PLAN.md  App.tsx  BACKGROUND_SELECTION_GUIDE.md  BRAINSTORM_NEW_GAMES.md  CLAUDE.md  CODE_QUALITY_IMPROVEMENTS_PLAN.md  CODE_REVIEW.md  CODE_REVIEW_REFACTORING.md  CONTRIBUTING.md  ENHANCED_PET_NEEDS_PLAN.md  FOLDER_STRUCTURE.md  I18N_IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_TASKS.md  NEXT_STEPS.md  PHASE_COMPLETION_SUMMARY.md  PLAN.md  PLAN_VALIDATION.md  README.md  RESPONSIVE.md  SESSION_SUMMARY.md  SESSION_WORK.md  SESSION_WORK_SUMMARY.md  SPEC.md  STATS_HOOK_MIGRATION_STATUS.md  STATS_HOOK_REFACTOR_PLAN.md  TODO.md  app.config.js  app.json  babel.config.js  implementation-plan.md  index.js  jest.config.js  jest.setup.js  (+5 more)
.Jules/: palette.md
.claude/: game-screenshots-memory.md  instructions.md  settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.husky/: pre-commit
app/: .env.example  .eslintrc.js  .gitignore  .pnpm-approve-builds  README.md  _layout.tsx  app.config.js  babel.config.js  eslint.config.js  eslint.config.mjs  index.js  index.tsx  jest.config.js  jest.setup.js  login.tsx  metro.config.js  package.json  (+3 more)
scripts/ralph/: .env.example  .gitignore  Makefile  QUICK_START.md  README.md  SETUP_COMPLETE.md  config.yml  pyproject.toml  requirements.txt  setup.sh
scripts/ralph/pipelines/: __init__.py  game_analytics.py
scripts/ralph/tests/: __init__.py  test_game_analytics.py
(+2261 files in other folders)
